[project]
name = "proyecto_glass-identification"
version = "0.1.0"
description = "Análisis de Glass con PyOD"
readme = "README.md"
requires-python = ">=3.9, <3.10"
dependencies = [
    "jupyter",
    "matplotlib<3.9",
    "numpy<2",
    "pandas<2.1",
    "scikit-learn<1.4",
    "seaborn",
    "ipykernel",
    "pyod>=2.0.6",
]
